log
Thu Mar 25 02:42:03 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘createList’:
list.c:33:11: error: ‘L’ is used uninitialized in this function [-Werror=uninitialized]
   L->head = NULL;
           ^
cc1: all warnings being treated as errors
Compilation failed
Thu Mar 25 02:42:58 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ff62b3f
Thu Mar 25 02:49:14 UTC 2021: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
28d1149
Thu Mar 25 03:11:56 UTC 2021: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  0|0
2ce3c8f
Thu Mar 25 03:12:34 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
0e4f0d8
Thu Mar 25 03:15:35 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
ab7e7fe
Thu Mar 25 03:18:23 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0450e42
Thu Mar 25 03:18:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a418d3
Thu Mar 25 03:19:24 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
70ca3c4
Thu Mar 25 03:19:47 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f242cc4
Thu Mar 25 03:23:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1e5d14a
Thu Mar 25 03:24:01 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
90eae76
Thu Mar 25 03:25:59 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac03ccc
Thu Mar 25 03:26:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c67cb7f
Thu Mar 25 03:31:44 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
e72ff53
Thu Mar 25 03:32:35 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
236f01e
